--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 body{
     font-family: 'Poppins', sans-serif;
+    background-color:  rgba(245, 245, 245, 0.876);
 }
 .container{
     margin-bottom: 50px;
+    background-color: rgba(248, 248, 255, 0.431); 
     
 }
 ul li{
@@ -34,7 +36,8 @@ button{
     width: 450px;
     height: 400px;
     float: right;
-    margin-bottom: 30px;
+    padding: 30px;
+    
 }
 .carousel-indicators .active{
    background-color: orange;
@@ -60,13 +63,22 @@ h3{
 }
 .card{
     border: none;
-    border-radius: 10px;
+   
     box-shadow: lightgrey 5px 5px 10px;
     margin-top: 15px;
     
 }
+.crdbr{
+    border-radius: 50px;
+
+}
 #Laptop{
     margin: 90px;
+
+}
+.card-img-top{
+    border-radius: 30px;
+    padding: 30px;
 
 }
 p{
@@ -79,7 +91,7 @@ p{
     
 }
 .subCategories{
-    margin-top: 35px;
+    margin-top: 70px;
 }
 hr{
     
@@ -99,31 +111,42 @@ hr{
     
 }
 .CCard{
-    width: 250px;
-    height: 300px;
+    width: 220px;
+    height: 270px;
 
     
  
 }
 #CCard3{
-    margin-top: 30px;
+    margin-top: 40px;
+    padding: 10px;
+    box-shadow: 0 10px 58px 0 rgba(0, 0, 0, 0.06), 0 6px 80px 0 rgba(0, 0, 0, 0.06);
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 40px;
+}
+#CCard2{
+    padding: 10px;
+    box-shadow: 0 10px 58px 0 rgba(0, 0, 0, 0.06), 0 6px 80px 0 rgba(0, 0, 0, 0.06);
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 40px;
 }
 
 
-.bgshoe{
-padding: 20px;
+ .bgshoe{
+
 margin-left: 220px;
+
    
-}
-.bg1{
+} 
+#CCard1{
     margin-top: 220px;
-    padding:0px;
-    
-   
-
-    
+    padding: 50px;
+    box-shadow: 0 10px 58px 0 rgba(0, 0, 0, 0.06), 0 6px 80px 0 rgba(0, 0, 0, 0.06);
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 40px;
 
 }
+
 .card-text{
     font-weight: bold;
     text-align: center;
