--- a/style.css
+++ b/style.css
@@ -80,8 +80,9 @@ padding: 0px 50px 50px 50px;
 h2{
     font-weight: bold;
 }
-h4{
+h6{
     color: orange;
+    font-weight: bold;
 }
 .text-center{
   
